# miku-notes-data

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs
migrations/: 20240711121640_init.down.sql  20240711121640_init.up.sql  reset.sql  test_insert.sql
src/: db.rs  main.rs  models.rs  proto.rs  types.rs
src/server/: file_server.rs  files.rs  mod.rs  notes.rs  shelves.rs  tags.rs
src/server/notes/: helpers.rs  mod.rs
